:sparkles: feat: Handle the case where the user does not have a subscription

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -328,6 +328,8 @@
         "title": "My subscription",
         "description": "Subscription details",
         "amount": "Amount:",
+        "no-subscription": "You do not yet have an active subscription.",
+        "discover-our-offers": "Discover our offers and get started today!",
         "period": {
           "title": "Period:",
           "separator": "to"
